--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <ul>
           <li>
             <img
-              src="/H-W-1/images/markguerrero.png"
+              src="/images/markguerrero.png"
               alt="Mark Guerrero"
               width="260"
             />
@@ -111,13 +111,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/H-W-1/images/tomford.png" alt="Tom Ford" width="260" />
+            <img src="/images/tomford.png" alt="Tom Ford" width="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/H-W-1/images/camilagarcia.png"
+              src="/images/camilagarcia.png"
               alt="Camila Garcia"
               width="260"
             />
@@ -126,7 +126,7 @@
           </li>
           <li>
             <img
-              src="/H-W-1/images/danielwilson.png"
+              src="/images/danielwilson.png"
               alt="Daniel Wilson"
               width="260"
             />
