--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <body>
     <!-- Header -->
     <header>
-      <a href=""> <span>Web</span>Studio </a>
-
       <nav>
+        <a href="./index.html">Web Studio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -31,7 +30,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </adress>
@@ -43,8 +42,9 @@
 
         <button type="button">Order Service</button>
       </section>
-
-      <ul>
+      
+      <section>
+           <ul>
         <li>
           <h2>Strategy</h2>
           <p>
@@ -74,6 +74,7 @@
           </p>
         </li>
       </ul>
+
 
       <section>
         <h2>What are we doing</h2>
