--- a/index.html
+++ b/index.html
@@ -42,39 +42,39 @@
 
         <button type="button">Order Service</button>
       </section>
-      
-      <section>
-           <ul>
-        <li>
-          <h2>Strategy</h2>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h2>Punctuality</h2>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h2>Diligence</h2>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk
-          </p>
-        </li>
-        <li>
-          <h2>Technologies</h2>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
 
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
       <section>
         <h2>What are we doing</h2>
@@ -138,7 +138,7 @@
       </section>
     </main>
     <!-- Footer -->
-    
+
     <footer>
       <a href=""> <span>Web</span>Studio </a>
       <p>
@@ -146,6 +146,5 @@
         marketing & growth solutions.
       </p>
     </footer>
-
   </body>
 </html>
