--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
 
-      <adress>
+      <address>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -33,7 +33,7 @@
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </adress>
+      </address>
     </header>
     <!-- Main -->
     <main>
