--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -80,18 +80,18 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="/images/comphoto.png" alt="computer" width="300" />
+            <img src="./images/comphoto.png" alt="computer" width="300" />
           </li>
           <li>
             <img
-              src="/images/smartphonephoto.png"
+              src="./images/smartphonephoto.png"
               alt="smartphone"
               width="300"
             />
           </li>
           <li>
             <img
-              src="/images/computerandsmartphone.png"
+              src="./images/computerandsmartphone.png"
               alt="computer and smartphone"
               width="300"
             />
@@ -104,7 +104,7 @@
         <ul>
           <li>
             <img
-              src="/images/markguerrero.png"
+              src="./images/markguerrero.png"
               alt="Mark Guerrero"
               width="260"
             />
@@ -112,13 +112,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/tomford.png" alt="Tom Ford" width="260" />
+            <img src="./images/tomford.png" alt="Tom Ford" width="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/camilagarcia.png"
+              src="./images/camilagarcia.png"
               alt="Camila Garcia"
               width="260"
             />
@@ -127,7 +127,7 @@
           </li>
           <li>
             <img
-              src="/images/danielwilson.png"
+              src="./images/danielwilson.png"
               alt="Daniel Wilson"
               width="260"
             />
