--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/comphoto.png" alt="computer" width="300" />
+            <img src="./images/comphoto.jpg" alt="computer" width="360" />
           </li>
           <li>
             <img
-              src="./images/smartphonephoto.png"
+              src="./images/smartphonephoto.jpg"
               alt="smartphone"
-              width="300"
+              width="360"
             />
           </li>
           <li>
             <img
-              src="./images/computerandsmartphone.png"
+              src="./images/computerandsmartphone.jpg"
               alt="computer and smartphone"
-              width="300"
+              width="360"
             />
           </li>
         </ul>
@@ -104,7 +104,7 @@
         <ul>
           <li>
             <img
-              src="./images/markguerrero.png"
+              src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
               width="260"
             />
@@ -112,13 +112,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tomford.png" alt="Tom Ford" width="260" />
+            <img src="./images/tomford.jpg" alt="Tom Ford" width="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/camilagarcia.png"
+              src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
               width="260"
             />
@@ -127,7 +127,7 @@
           </li>
           <li>
             <img
-              src="./images/danielwilson.png"
+              src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
               width="260"
             />
@@ -140,7 +140,7 @@
     <!-- Footer -->
 
     <footer>
-      <a href=""> <span>Web</span>Studio </a>
+      <a href="">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
