--- a/index.html
+++ b/index.html
@@ -44,30 +44,31 @@
       </section>
 
       <section>
+        <h2>Why you should choose us?</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -106,13 +107,13 @@
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
-              width="260"
+              width="264"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tomford.jpg" alt="Tom Ford" width="260" />
+            <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -120,7 +121,7 @@
             <img
               src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
-              width="260"
+              width="264"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -129,7 +130,7 @@
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
-              width="260"
+              width="264"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -140,7 +141,7 @@
     <!-- Footer -->
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
